<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/main_run_data_distance_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_run_data_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="70sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/text_run_data_distance_unit"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_run_data_dis_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_run_data_distance_linear"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/text_run_data_distance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_run_data_dis_text"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/main_run_data_time_linear"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">


            <TextView
                android:id="@+id/main_run_data_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12.0"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/main_run_data_time"
                android:layout_alignBottom="@id/main_run_data_time"
                android:text="@string/text_run_data_time_unit"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_run_data_time"
                android:layout_marginTop="10dp"
                android:text="@string/text_run_data_time"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_run_data_score_linear"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">


            <TextView
                android:id="@+id/main_run_data_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/main_run_data_score"
                android:layout_alignBottom="@id/main_run_data_score"
                android:text="@string/text_run_data_count_unit"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_run_data_score"
                android:layout_marginTop="10dp"
                android:text="@string/text_run_data_count"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>