<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_while">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"></android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:visibility="gone"
            android:padding="5dp">

            <EditText
                android:id="@+id/edt_register_email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edit_gray_selector"
                android:hint="@string/hint_email"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/text_black"
                android:singleLine="true"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_register_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:visibility="visible"
           >

            <EditText
                android:id="@+id/edt_register_mobile"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edit_gray_selector"
                android:hint="@string/hint_mobile"
                android:textColor="@color/text_black"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_get_rerify_code"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_alignRight="@id/edt_register_mobile"
                android:layout_below="@id/edt_register_mobile"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_login_verify_code"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/text_get_verify_code"
                android:textColor="@color/text_light_blue"
                android:textSize="16sp" />

            <EditText
            android:id="@+id/edt_register_verify_code"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_alignTop="@id/btn_get_rerify_code"
            android:layout_below="@id/edt_register_mobile"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/btn_get_rerify_code"
            android:background="@drawable/edit_gray_selector"
            android:hint="@string/hint_verify_code"
                android:textColor="@color/text_black"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="16sp" />
        </RelativeLayout>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        >
        <EditText
            android:id="@+id/edt_register_set_pwd"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/edit_gray_selector"
            android:hint="@string/hint_set_pwd"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/text_black"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:textSize="16sp" />
        <Button
            android:id="@+id/btn_register_next_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/action_next_step"
            android:textColor="@color/theme_while"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/text_switch_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_switch_to_email"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginBottom="36dp"
            android:elevation="4dp"
            />
    </RelativeLayout>
</LinearLayout>
